# lms-rust

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  init-mongo.js
src/: lib.rs  main.rs  mongo_connection.rs
src/songs/: handlers.rs  mod.rs  repository.rs
